--- a/todo-app/public/index.html
+++ b/todo-app/public/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8" />
   <title>My Todo</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="app">
-    <h1>✨ <span>My Todo</span></h1>
+    <h1>📝 <span>My Todo</span></h1>
 
     <div class="input-box">
       <input id="taskInput" placeholder="What’s the move today?" />
